logged users can now see a message appearing

--- a/.eslintrc
+++ b/.eslintrc
@@ -20,136 +20,9 @@
     }
   },
   "globals": {
-    "$ExtractArgument": true,
-    "$ExtractComponentProps": true,
-    "$ExtractObject": true,
-    "$ExtractReturn": true,
-    "$Keys": true,
-    "$PropertyType": true,
-    "$Shape": true,
-    "$Values": true,
-    "$ExtractActionParams": true,
-    "Activity": true,
-    "Answer": true,
-    "AnswerValue": true,
-    "AnyUser": true,
-    "AuditItem": true,
-    "AvailabilityType": true,
-    "BasicQuotation": true,
-    "BatchItem": true,
-    "BidAnswers": true,
-    "BroadcastUserWithDate": true,
-    "BuyOperationStatus": true,
-    "CategoryType": true,
-    "Choice": true,
-    "ChoiceOf": true,
-    "Company": true,
-    "Conversation": true,
-    "CostPriceParameters": true,
-    "CostPriceParametersForm": true,
-    "Currency": true,
-    "Data": true,
-    "DetailedStatus": true,
-    "EventType": true,
-    "ExchangeRates": true,
-    "ExternalUser": true,
-    "FixedQuotation": true,
-    "FormQuestion": true,
-    "Generator": true,
-    "Goal": true,
-    "Grid": true,
-    "GridType": true,
-    "GridWithIsAvailableOffline": true,
-    "Image": true,
-    "IncotermDict": true,
-    "Instance": true,
-    "Language": true,
-    "LanguageDict": true,
-    "LanguageKey": true,
-    "LinkedOperationQuestionToPrefillKey": true,
-    "Loading": true,
-    "LogisticsType": true,
-    "LogisticCost": true,
-    "MapOfAnswers": true,
-    "MapOfAudits": true,
-    "MapOf": true,
-    "MapOfBoolean": true,
-    "MapOfBroadcastUsersWithDates": true,
-    "MapOfChoices": true,
-    "MapOfCompanies": true,
-    "MapOfConversationMessages": true,
-    "MapOfConversations": true,
-    "MapOfCostPriceParameters": true,
-    "MapOfDates": true,
-    "MapOfGrids": true,
-    "MapOfImages": true,
-    "MapOfInstances": true,
-    "MapOfOffers": true,
-    "MapOfOperations": true,
-    "MapOfQuestions": true,
-    "MapOfQuotations": true,
-    "MapOfSites": true,
-    "MapOfStatuses": true,
-    "MapOfTransactions": true,
-    "MapOfUsers": true,
-    "MercurialIndexedQuotation": true,
-    "Message": true,
-    "MessageStatus": true,
-    "MessageType": true,
-    "ModalInfomation": true,
-    "NonMobileUser": true,
-    "Offer": true,
-    "OfferStatus": true,
-    "OfferType": true,
-    "OfferWithBidderWithSite": true,
-    "OfferWithQuality": true,
-    "OfferWithSite": true,
-    "OnboardingTrackName": true,
-    "OnboardingTrackStep": true,
-    "Operation": true,
-    "OperationDirection": true,
-    "OperationFiltersType": true,
-    "OperationTableType": true,
-    "OperationTag": true,
-    "OperationType": true,
-    "PercentageIndexedQuotation": true,
-    "PhoneContact": true,
-    "QuantityFieldType": true,
-    "Question": true,
-    "Quotation": true,
-    "quotationGridId": true,
-    "RawPhoneContact": true,
-    "RequestItem": true,
-    "Role": true,
-    "Router": true,
-    "SavedQuestions": true,
-    "SectionItemType": true,
-    "SellOperationStatus": true,
-    "Settings": true,
-    "Site": true,
-    "SiteWithCompany": true,
-    "SpecificQuestionKey": true,
-    "SpotQuotation": true,
+    "AuthenticationState": true,
+    "UserInfo": true,
     "State": true,
-    "Status": true,
-    "SuggestedProfitableBidAnswers": true,
-    "SuggestedProfitableBid": true,
-    "Suggestion": true,
-    "SyntheticInputEvent": true,
-    "T": true,
-    "TableDataType": true,
-    "TableItemField": true,
-    "Transaction": true,
-    "TransactionFilterType": true,
-    "TransactionWithSiteWithCompany": true,
-    "Todo": true,
-    "TodoType": true,
-    "Ui": true,
-    "User": true,
-    "UserWithConversation": true,
-    "UserWithSiteWithCompany": true,
-    "Volume": true,
-    "WebUser": true
   },
   "rules": {
     "object-curly-newline": "warn",
