--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
-    "redux": "^4.0.2"
+    "redux": "^4.0.2",
+    "redux-persist": "^5.10.0",
+    "reselect-tools": "^0.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
