fetching users table

--- a/.eslintrc
+++ b/.eslintrc
@@ -29,6 +29,7 @@
     "MapOf": true,
     "State": true,
     "UserInfo": true,
+    "UserList": true,
   },
   "rules": {
     "object-curly-newline": "warn",
