now loggin and signup with sagas + some css @messages

--- a/.eslintrc
+++ b/.eslintrc
@@ -26,6 +26,8 @@
     "$ExtractObject": true,
     "AuthenticationState": true,
     "ChoiceOf": true,
+    "Credentials": true,
+    "Generator":true,
     "MapOf": true,
     "State": true,
     "UserInfo": true,
