messages are passed to the store on the home page and displayed @messages

--- a/.eslintrc
+++ b/.eslintrc
@@ -29,6 +29,7 @@
     "Credentials": true,
     "Generator":true,
     "MapOf": true,
+    "Message": true,
     "State": true,
     "UserInfo": true,
     "UserList": true,
