--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "redux-persist": "^5.10.0",
     "redux-saga": "^1.0.5",
     "reselect-tools": "^0.0.7",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.87.3",
     "uuid": "^3.3.2"
   },
   "scripts": {
